Addressing review comments

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
@@ -45,46 +45,31 @@
 {%             endif %}
 {%         elif ethernet_interface.type | arista.avd.default('switched') == 'switched' %}
 {%             set description = ethernet_interface.description | arista.avd.default("-") %}
-{%             if  ethernet_interface.switchport.mode is arista.avd.defined %}
-{%                 set mode = ethernet_interface.switchport.mode %}
-{%                 if mode in ["access", "dot1q-tunnel"] %}
-{%                     set vlans = ethernet_interface.switchport.access_vlan %}
-{%                 elif mode == "trunk" %}
-{%                     set vlans = ethernet_interface.switchport.trunk.allowed_vlan %}
-{%                 elif mode == "trunk phone" %}
-{%                     set vlans = ethernet_interface.switchport.phone.vlan %}
+{%             set mode = ethernet_interface.switchport.mode | arista.avd.default(ethernet_interface.mode, '-') %}
+{%             if ethernet_interface.switchport.access_vlan is arista.avd.defined or
+                ethernet_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
+{%                 set vlans = [] %}
+{%                 if ethernet_interface.switchport.access_vlan is arista.avd.defined %}
+{%                     do vlans.append(ethernet_interface.switchport.access_vlan | int) %}
 {%                 endif %}
+{%                 if ethernet_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
+{%                     set allowed_vlans = ethernet_interface.switchport.trunk.allowed_vlan | arista.avd.range_expand %}
+{%                     for allowed_vlan in allowed_vlans %}
+{%                         do vlans.append(allowed_vlan | int) %}
+{%                     endfor %}
+{%                 endif %}
+{%                 set vlans = vlans | arista.avd.list_compress %}
 {%             else %}
-{%                 set mode = ethernet_interface.mode | arista.avd.default('access') %}
 {%                 set vlans = ethernet_interface.vlans | arista.avd.default('-') %}
 {%             endif %}
 {%             if  ethernet_interface.native_vlan_tag is arista.avd.defined(true) or
                 ethernet_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) %}
 {%                 set native_vlan = "tag" %}
 {%             else %}
-{%                 if ethernet_interface.switchport.trunk.native_vlan is arista.avd.defined %}
-{%                     set native_vlan = ethernet_interface.switchport.trunk.native_vlan %}
-{%                 else %}
-{%                     set native_vlan = ethernet_interface.native_vlan | arista.avd.default('-') %}
-{%                 endif %}
+{%                 set native_vlan = ethernet_interface.switchport.trunk.native_vlan | arista.avd.default(ethernet_interface.native_vlan, '-') %}
 {%             endif %}
-{%             if ethernet_interface.trunk_groups is arista.avd.defined or ethernet_interface.switchport.trunk.groups is arista.avd.defined %}
-{%                 set l2 = namespace() %}
-{%                 set l2.trunk_groups = [] %}
-{%                 if ethernet_interface.switchport.trunk.groups is arista.avd.defined %}
-{%                     for trunk_group in ethernet_interface.switchport.trunk.groups | arista.avd.natural_sort %}
-{%                         do l2.trunk_groups.append(trunk_group) %}
-{%                     endfor %}
-{%                 elif  ethernet_interface.trunk_groups is arista.avd.defined %}
-{%                     for trunk_group in ethernet_interface.trunk_groups | arista.avd.natural_sort %}
-{%                         do l2.trunk_groups.append(trunk_group) %}
-{%                     endfor %}
-{%                 endif %}
-{%             else %}
-{%                 set l2 = namespace() %}
-{%                 set l2.trunk_groups = "-" %}
-{%             endif %}
-| {{ ethernet_interface.name }} |  {{ description }} | {{ mode }} | {{ vlans }} | {{ native_vlan }} | {{ l2.trunk_groups }} | - |
+{%             set trunk_groups = ethernet_interface.switchport.trunk.groups | arista.avd.default(ethernet_interface.trunk_groups, '-') %}
+| {{ ethernet_interface.name }} |  {{ description }} | {{ mode }} | {{ vlans }} | {{ native_vlan }} | {{ trunk_groups }} | - |
 {%         endif %}
 {%     endfor %}
 
@@ -155,15 +140,9 @@
 | Interface | PVLAN Mapping | Secondary Trunk |
 | --------- | ------------- | ----------------|
 {%         for ethernet_interface in ethernet_interfaces | arista.avd.natural_sort('name') %}
-{%             if ethernet_interface.switchport.pvlan_mapping is arista.avd.defined or
-                ethernet_interface.switchport.trunk.private_vlan_secondary is arista.avd.defined %}
-{%                 set row_pvlan_mapping = ethernet_interface.switchport.pvlan_mapping | arista.avd.default('-') %}
-{%                 set row_trunk_private_vlan_secondary = ethernet_interface.switchport.trunk.private_vlan_secondary | arista.avd.default('-') %}
-| {{ ethernet_interface.name }} | {{ row_pvlan_mapping }} | {{ row_trunk_private_vlan_secondary }} |
-{%             elif ethernet_interface.pvlan_mapping is arista.avd.defined or
-                ethernet_interface.trunk_private_vlan_secondary is arista.avd.defined %}
-{%                 set row_pvlan_mapping = ethernet_interface.pvlan_mapping | arista.avd.default('-') %}
-{%                 set row_trunk_private_vlan_secondary = ethernet_interface.trunk_private_vlan_secondary | arista.avd.default('-') %}
+{%             set row_pvlan_mapping = ethernet_interface.switchport.pvlan_mapping | arista.avd.default(ethernet_interface.pvlan_mapping, '-') %}
+{%             set row_trunk_private_vlan_secondary = ethernet_interface.switchport.trunk.private_vlan_secondary | arista.avd.default(ethernet_interface.trunk_private_vlan_secondary, '-') %}
+{%             if row_pvlan_mapping != '-' or row_trunk_private_vlan_secondary != '-' %}
 | {{ ethernet_interface.name }} | {{ row_pvlan_mapping }} | {{ row_trunk_private_vlan_secondary }} |
 {%             endif %}
 {%         endfor %}
@@ -182,39 +161,29 @@
 
 ##### VLAN Translations
 
-| Interface |  Direction | From VLAN ID(s) | To VLAN ID | From Inner VLAN ID | To Inner VLAN ID | Dot1q-tunnel |
-| --------- |  --------- | --------------- | ---------- | ------------------ | ---------------- | ------------ |
+| Interface |  Direction | From VLAN ID(s) | To VLAN ID | From Inner VLAN ID | To Inner VLAN ID | Network | Dot1q-tunnel |
+| --------- |  --------- | --------------- | ---------- | ------------------ | ---------------- | ------- | ------------ |
 {%         for ethernet_interface in ethernet_interfaces | arista.avd.natural_sort('name') %}
 {%             if ethernet_interface.switchport.vlan_translations is arista.avd.defined %}
 {%                 for vlan_translation in ethernet_interface.switchport.vlan_translations.direction_both | arista.avd.natural_sort('from') %}
-{%                     if vlan_translation.network is arista.avd.defined(true) %}
-{%                         set to_vlan_id = 'network VLAN ' ~ vlan_translation.to %}
-{%                     else %}
-{%                         set to_vlan_id = vlan_translation.to %}
-{%                     endif %}
-| {{ ethernet_interface.name }} | both | {{ vlan_translation.from }} | {{ to_vlan_id | arista.avd.default('-') }} | {{ vlan_translation.inner_vlan_from | arista.avd.default('-') }} | - | {{ vlan_translation.dot1q_tunnel | arista.avd.default('-') }} |
+| {{ ethernet_interface.name }} | both | {{ vlan_translation.from }} | {{ vlan_translation.to | arista.avd.default('-') }} | {{ vlan_translation.inner_vlan_from | arista.avd.default('-') }} | - | {{ vlan_translation.network | arista.avd.default('-') }} | {{ vlan_translation.dot1q_tunnel | arista.avd.default('-') }} |
 {%                 endfor %}
 {%                 for vlan_translation in ethernet_interface.switchport.vlan_translations.direction_in | arista.avd.natural_sort('from') %}
-| {{ ethernet_interface.name }} | in | {{ vlan_translation.from }} | {{ vlan_translation.to | arista.avd.default('-') }} | - | {{ vlan_translation.inner_vlan_to | arista.avd.default('-') }} | {{ vlan_translation.dot1q_tunnel | arista.avd.default('-') }} |
+| {{ ethernet_interface.name }} | in | {{ vlan_translation.from }} | {{ vlan_translation.to | arista.avd.default('-') }} | - | {{ vlan_translation.inner_vlan_to | arista.avd.default('-') }} | {{ vlan_translation.network | arista.avd.default('-') }} | {{ vlan_translation.dot1q_tunnel | arista.avd.default('-') }} |
 {%                 endfor %}
 {%                 for vlan_translation in ethernet_interface.switchport.vlan_translations.direction_out | arista.avd.natural_sort('from') %}
-{%                     if vlan_translation.dot1q_tunnel is arista.avd.defined %}
+{%                     set to_vlan_id = vlan_translation.dot1q_tunnel.all | arista.avd.default( vlan_translation.dot1q_tunnel.to, vlan_translation.to, "-") %}
+{%                     if vlan_translation.dot1q_tunnel.all is arista.avd.defined or
+                        vlan_translation.dot1q_tunnel.to is arista.avd.defined %}
 {%                         set dot1q_tunnel = "True" %}
-{%                         if vlan_translation.dot1q_tunnel.all is arista.avd.defined %}
-{%                             set to_vlan_id = "all" %}
-{%                         elif vlan_translation.dot1q_tunnel.to is arista.avd.defined %}
-{%                             set to_vlan_id = vlan_translation.dot1q_tunnel.to %}
-{%                         endif %}
-{%                     elif vlan_translation.to is arista.avd.defined %}
-{%                         set to_vlan_id = vlan_translation.to %}
 {%                     endif %}
-| {{ ethernet_interface.name }} | out | {{ vlan_translation.from }} | {{ to_vlan_id | arista.avd.default('-') }} | - | {{ vlan_translation.inner_vlan_to | arista.avd.default('-') }} | {{ dot1q_tunnel | arista.avd.default('-') }} |
+| {{ ethernet_interface.name }} | out | {{ vlan_translation.from }} | {{ to_vlan_id | arista.avd.default('-') }} | - | {{ vlan_translation.inner_vlan_to | arista.avd.default('-') }} | {{ vlan_translation.network | arista.avd.default('-') }} | {{ dot1q_tunnel | arista.avd.default(vlan_translation.dot1q_tunnel, '-') }} |
 {%                 endfor %}
 {%             elif ethernet_interface.vlan_translations is arista.avd.defined %}
 {%                 for vlan_translation in ethernet_interface.vlan_translations | arista.avd.natural_sort %}
 {%                     if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
 {%                         set row_direction = vlan_translation.direction | arista.avd.default('both') %}
-| {{ ethernet_interface.name }} | {{ row_direction }} | {{ vlan_translation.from }} | {{ vlan_translation.to }} | - | - | - |
+| {{ ethernet_interface.name }} | {{ row_direction }} | {{ vlan_translation.from }} | {{ vlan_translation.to }} | - | - | - | - |
 {%                     endif %}
 {%                 endfor %}
 {%             endif %}
@@ -295,9 +264,7 @@
 {# Phone Interfaces #}
 {%     set phone_interfaces = [] %}
 {%     for interface in ethernet_interfaces | arista.avd.natural_sort('name') + port_channel_interfaces | arista.avd.natural_sort('name') %}
-{%         if interface.switchport.phone is arista.avd.defined %}
-{%             do phone_interfaces.append(interface) %}
-{%         elif interface.phone is arista.avd.defined %}
+{%         if interface.switchport.phone is arista.avd.defined or interface.phone is arista.avd.defined %}
 {%             do phone_interfaces.append(interface) %}
 {%         endif %}
 {%     endfor %}
@@ -308,26 +275,10 @@
 | Interface | Mode | Native VLAN | Phone VLAN | Phone VLAN Mode |
 | --------- | ---- | ----------- | ---------- | --------------- |
 {%         for phone_interface in phone_interfaces %}
-{%             if phone_interface.switchport.mode is arista.avd.defined %}
-{%                 set mode = phone_interface.switchport.mode %}
-{%             else %}
-{%                 set mode = phone_interface.mode | arista.avd.default('-') %}
-{%             endif %}
-{%             if phone_interface.switchport.trunk.native_vlan is arista.avd.defined %}
-{%                 set native_vlan = phone_interface.switchport.trunk.native_vlan %}
-{%             else %}
-{%                 set native_vlan = phone_interface.native_vlan | arista.avd.default(1) %}
-{%             endif %}
-{%             if phone_interface.switchport.phone.vlan is arista.avd.defined %}
-{%                 set phone_vlan = phone_interface.switchport.phone.vlan %}
-{%             else %}
-{%                 set phone_vlan = phone_interface.phone.vlan | arista.avd.default('-') %}
-{%             endif %}
-{%             if phone_interface.switchport.phone.trunk is arista.avd.defined %}
-{%                 set phone_vlan_mode = phone_interface.switchport.phone.trunk %}
-{%             else %}
-{%                 set phone_vlan_mode = phone_interface.phone.trunk | arista.avd.default('-') %}
-{%             endif %}
+{%             set mode = phone_interface.switchport.mode | arista.avd.default(phone_interface.mode, '-') %}
+{%             set native_vlan = phone_interface.switchport.trunk.native_vlan | arista.avd.default(phone_interface.native_vlan, '-') %}
+{%             set phone_vlan = phone_interface.switchport.phone.vlan | arista.avd.default(phone_interface.phone.vlan, '-') %}
+{%             set phone_vlan_mode = phone_interface.switchport.phone.trunk | arista.avd.default(phone_interface.phone.trunk, '-') %}
 | {{ phone_interface.name }} | {{ mode }} | {{ native_vlan }} | {{ phone_vlan }} | {{ phone_vlan_mode }} |
 {%         endfor %}
 {%     endif %}
