update j2 logic for empty src/dst port

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/traffic-policies.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/traffic-policies.j2
@@ -107,6 +107,8 @@
 {%                         endif %}
 {%                     else %}
 {%                         set row.protocols = "ANY" %}
+{%                         set row.src_port = "ANY" %}
+{%                         set row.dst_port = "ANY" %}
 {%                     endif %}
 {#                     -- Action management #}
 {%                     set row.actions = [] %}
