--- a/ansible_collections/arista/avd/roles/dhcp_provisioner/templates/ztp_configuration.j2
+++ b/ansible_collections/arista/avd/roles/dhcp_provisioner/templates/ztp_configuration.j2
@@ -12,7 +12,7 @@
 {% endif %}
 {% set node_types = dict() %}
 {% if hostvars[groups[fabric_group][0]]['node_type_keys'] is arista.avd.defined %}
-{%     set node_type_keys = hostvars[groups[fabric_group][0]]['node_type_keys'] | arista.avd.convert_dicts('key') | map(attribute='key') %}
+{%     set node_type_keys = hostvars[groups[fabric_group][0]]['node_type_keys'] | map(attribute='key') %}
 {% else %}
 {%     set node_type_keys = ['spine', 'l3leaf', 'l2leaf', 'super_spine', 'overlay_controller'] %}
 {% endif %}
@@ -70,8 +70,8 @@ ztp:
 {% for node_type in node_types | arista.avd.natural_sort %}
     # {{ node_type }}
 {# For NODE GROUPS entries #}
-{%     for node_group in node_types[node_type]['node_groups'] | arista.avd.convert_dicts('group') | arista.avd.natural_sort('group') %}
-{%         for node in node_group['nodes'] | arista.avd.convert_dicts('name') | arista.avd.natural_sort('name') %}
+{%     for node_group in node_types[node_type]['node_groups'] | arista.avd.natural_sort('group') %}
+{%         for node in node_group['nodes'] | arista.avd.natural_sort('name') %}
 {%             if node.mac_address is arista.avd.defined %}
     - name: {{ node.name }}
       mac: '{{ node.mac_address }}'
@@ -80,7 +80,7 @@ ztp:
 {%         endfor %}
 {%     endfor %}
 {# For NODES List #}
-{%     for node in node_types[node_type]['nodes'] | arista.avd.convert_dicts('name') | arista.avd.natural_sort('name') %}
+{%     for node in node_types[node_type]['nodes'] | arista.avd.natural_sort('name') %}
 {%         if node.mac_address is arista.avd.defined %}
     - name: {{ node.name }}
       mac: '{{ node.mac_address }}'
