--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -125,6 +125,7 @@ interface {{ port_channel_interface.name }}
 {%         endif %}
    {{ tap_mac_address_cli }}
 {%     endif %}
+{# The position of "mpls_pop_all" does not match the EOS CLI to implement this "elif" with "vxlan_strip" #}
 {%     if port_channel_interface.switchport.tap.mpls_pop_all is arista.avd.defined(true) %}
    switchport tap mpls pop all
 {%     elif port_channel_interface.switchport.tap.encapsulation.vxlan_strip is arista.avd.defined(true) %}
@@ -172,14 +173,14 @@ interface {{ port_channel_interface.name }}
 {%     elif port_channel_interface.switchport.tool.identity.qinq_dzgre_source is arista.avd.defined %}
    switchport tool identity qinq source dzgre {{ port_channel_interface.switchport.tool.identity.qinq_dzgre_source }}
 {%     endif %}
-{%     if port_channel_interface.switchport.tap.truncation.enabled is arista.avd.defined %}
+{%     if port_channel_interface.switchport.tap.truncation.enabled is arista.avd.defined(true) %}
 {%         set tap_truncation_cli = "switchport tap truncation" %}
 {%         if port_channel_interface.switchport.tap.truncation.size is arista.avd.defined %}
 {%             set tap_truncation_cli = tap_truncation_cli ~ " " ~ port_channel_interface.switchport.tap.truncation.size %}
 {%         endif %}
    {{ tap_truncation_cli }}
 {%     endif %}
-{%     if port_channel_interface.switchport.tool.truncation.enabled is arista.avd.defined %}
+{%     if port_channel_interface.switchport.tool.truncation.enabled is arista.avd.defined(true) %}
 {%         set tool_truncation_cli = "switchport tool truncation" %}
 {%         if port_channel_interface.switchport.tool.truncation.size is arista.avd.defined %}
 {%             set tool_truncation_cli = tool_truncation_cli ~ " " ~ port_channel_interface.switchport.tool.truncation.size %}
